add symlinks for filter_plugins and roles to playbook directories
- allows playbooks to be able to discover roles and filter_plugins without
  having to manipulate the environment or use relative paths.

--- a/playbooks/aws/ansible-tower/config.yml
+++ b/playbooks/aws/ansible-tower/config.yml
@@ -16,7 +16,7 @@
     - vars.yml
     - "vars.{{ oo_env }}.yml"
   roles:
-    - ../../../roles/base_os
-    - ../../../roles/os_ipv6_disable
-    - ../../../roles/ansible
-    - ../../../roles/ansible_tower
+    - base_os
+    - os_ipv6_disable
+    - ansible
+    - ansible_tower
