--- a/playbooks/aws/os2-atomic-proxy/config.yml
+++ b/playbooks/aws/os2-atomic-proxy/config.yml
@@ -16,5 +16,5 @@
     - vars.yml
     - "vars.{{ oo_env }}.yml"
   roles:
-    - ../../../roles/atomic_base
-    - ../../../roles/atomic_proxy
+    - atomic_base
+    - atomic_proxy
