--- a/playbooks/aws/openshift-master/config.yml
+++ b/playbooks/aws/openshift-master/config.yml
@@ -30,11 +30,11 @@
   vars_files:
     - vars.yml
   roles:
-    - ../../../roles/base_os
-    - ../../../roles/repos
+    - base_os
+    - repos
     - {
-        role: ../../../roles/openshift_master,
+        role: openshift_master,
         oo_node_ips: "{{ hostvars['localhost'].oo_node_ips | default(['']) }}",
         oo_bind_ip: "{{ hostvars[inventory_hostname].ansible_eth0.ipv4.address | default(['']) }}"
       }
-    - ../../../roles/pods
+    - pods
