--- a/playbooks/aws/openshift-master/config.yml
+++ b/playbooks/aws/openshift-master/config.yml
@@ -1,3 +1,4 @@
+---
 - name: "populate oo_hosts_to_config host group if needed"
   hosts: localhost
   gather_facts: no
@@ -16,11 +17,11 @@
   hosts: localhost
   gather_facts: no
   tasks:
-    - name: Setting oo_node_ips fact on localhost
+    - name: Setting openshift_node_ips fact on localhost
       set_fact:
-        oo_node_ips: "{{ hostvars
+        openshift_node_ips: "{{ hostvars
             | oo_select_keys(groups['tag_env-host-type_' + oo_env + '-openshift-node'])
-            | oo_collect(attribute='ansible_eth0.ipv4.address') }}"
+            | oo_collect(attribute='ansible_default_ipv4.address') }}"
       when: groups['tag_env-host-type_' + oo_env + '-openshift-node'] is defined
 
 - name: "Configure instances"
@@ -33,8 +34,9 @@
     - base_os
     - repos
     - {
-        role: openshift_master,
-        oo_node_ips: "{{ hostvars['localhost'].oo_node_ips | default(['']) }}",
-        oo_bind_ip: "{{ hostvars[inventory_hostname].ansible_eth0.ipv4.address | default(['']) }}"
+        role: openshift,
+        openshift_node_ips: "{{ hostvars['localhost'].openshift_node_ips | default(['']) }}",
+        openshift_env: "{{ oo_env }}"
+        # TODO: openshift_public_ip: set to aws instance public ip
       }
     - pods
