--- a/playbooks/gce/openshift-node/config.yml
+++ b/playbooks/gce/openshift-node/config.yml
@@ -1,7 +1,7 @@
+---
 - name: "populate oo_hosts_to_config host group if needed"
   hosts: localhost
   gather_facts: no
-
   tasks:
   - name: Evaluate oo_host_group_exp
     add_host: "name={{ item }} groups=oo_hosts_to_config"
@@ -17,15 +17,15 @@
   hosts: localhost
   gather_facts: no
   tasks:
-    - name: Setting oo_master_ips fact on localhost
+    - name: Setting openshift_master_ips fact on localhost
       set_fact:
-        oo_master_ips: "{{ hostvars
+        openshift_master_ips: "{{ hostvars
             | oo_select_keys(groups['tag_env-host-type-' + oo_env + '-openshift-master'])
-            | oo_collect(attribute='ansible_eth0.ipv4.address') }}"
+            | oo_collect(attribute='ansible_default_ipv4.address') }}"
       when: groups['tag_env-host-type-' + oo_env + '-openshift-master'] is defined
-    - name: Setting oo_master_public_ips fact on localhost
+    - name: Setting openshift_master_public_ips fact on localhost
       set_fact:
-        oo_master_public_ips: "{{ hostvars
+        openshift_master_public_ips: "{{ hostvars
             | oo_select_keys(groups['tag_env-host-type-' + oo_env + '-openshift-master'])
             | oo_collect(attribute='gce_public_ip') }}"
       when: groups['tag_env-host-type-' + oo_env + '-openshift-master'] is defined
@@ -42,8 +42,8 @@
     - docker
     - {
         role: openshift_node,
-        oo_master_ips: "{{ hostvars['localhost'].oo_master_ips | default(['']) }}",
-        oo_master_public_ips: "{{ hostvars['localhost'].oo_master_public_ips | default(['']) }}",
-        oo_bind_ip: "{{ hostvars[inventory_hostname].ansible_eth0.ipv4.address | default(['']) }}",
-        oo_public_ip: "{{ hostvars[inventory_hostname].ansible_ssh_host }}"
+        openshift_master_ips: "{{ hostvars['localhost'].openshift_master_ips | default(['']) }}",
+        openshift_master_public_ips: "{{ hostvars['localhost'].openshift_master_public_ips | default(['']) }}",
+        openshift_public_ip: "{{ gce_public_ip }}",
+        openshift_env: "{{ oo_env }}",
       }
