--- a/roles/openshift_master/handlers/main.yml
+++ b/roles/openshift_master/handlers/main.yml
@@ -1,4 +1,4 @@
 ---
-# handlers file for openshift_master
 - name: restart openshift-master
   service: name=openshift-master state=restarted
+  when: not openshift_master_manage_service_externally
