--- a/playbooks/aws/ansible-tower/config.yml
+++ b/playbooks/aws/ansible-tower/config.yml
@@ -17,6 +17,7 @@
     - "vars.{{ oo_env }}.yml"
   roles:
     - ../../../roles/base_os
+    - ../../../roles/timezone
     - ../../../roles/ipv6_disable
     - ../../../roles/ansible_install
     - ../../../roles/ansible_tower
