--- a/roles/ansible_tower/tasks/main.yaml
+++ b/roles/ansible_tower/tasks/main.yaml
@@ -15,14 +15,14 @@
   get_url: url=http://releases.ansible.com/ansible-tower/setup/ansible-tower-setup-2.1.1.tar.gz
     dest=/opt/ force=yes
 
-- name: extract Tower
-  unarchive: src=/opt/ansible-tower-setup-2.1.1.tar.gz dest=/opt copy=no
-
-- name: copy tower_setup_conf.yml
-  copy: src=tower_setup_conf.yml dest=/opt/ansible-tower-setup-2.1.1 owner=root group=root mode=0644
-
-- name: copy inventory
-  copy: src=inventory dest=/opt/ansible-tower-setup-2.1.1 owner=root group=root mode=0644
+#- name: extract Tower
+#  unarchive: src=/opt/ansible-tower-setup-2.1.1.tar.gz dest=/opt copy=no
+#
+#- name: copy tower_setup_conf.yml
+#  copy: src=tower_setup_conf.yml dest=/opt/ansible-tower-setup-2.1.1 owner=root group=root mode=0644
+#
+#- name: copy inventory
+#  copy: src=inventory dest=/opt/ansible-tower-setup-2.1.1 owner=root group=root mode=0644
 
 - name: run the Tower installer
   command: chdir=/opt/ansible-tower-setup-2.1.1 creates=/etc/awx/settings.py ./setup.sh
