--- a/playbooks/aws/openshift-master/config.yml
+++ b/playbooks/aws/openshift-master/config.yml
@@ -3,7 +3,7 @@
   hosts: localhost
   gather_facts: no
   tasks:
-  - name: Evaluate oo_host_group_exp if it's set
+  - name: "Evaluate oo_host_group_exp if it's set"
     add_host: "name={{ item }} groups=oo_hosts_to_config"
     with_items: "{{ oo_host_group_exp | default('') }}"
     when: oo_host_group_exp is defined
@@ -36,7 +36,7 @@
         role: openshift_master,
         openshift_node_ips: "{{ hostvars['localhost'].openshift_node_ips | default(['']) }}",
         openshift_env: "{{ oo_env }}"
-        # TODO: openshift_public_ip: set to aws instance public ip
+        openshift_public_ip: "{{ ec2_ip_address }}"
       }
     - pods
     - os_env_extras
