Use the full path for the kubeconfig

--- a/roles/base_os/tasks/main.yaml
+++ b/roles/base_os/tasks/main.yaml
@@ -15,7 +15,7 @@
   lineinfile:
     dest: /root/.bash_profile
     regexp: "KUBECONFIG="
-    line: "export KUBECONFIG={{ openshift_master_credentials_dir }}.kubeconfig"
+    line: "export KUBECONFIG=/var/lib/openshift/openshift.local.certificates/admin/.kubeconfig"
     state: present
     insertafter: EOF
 
