--- a/playbooks/aws/openshift-node/config.yml
+++ b/playbooks/aws/openshift-node/config.yml
@@ -35,7 +35,7 @@
     - repos
     - docker
     - {
-        role: openshift-node,
+        role: openshift_node,
         openshift_master_ips: "{{ hostvars['localhost'].openshift_master_ips | default(['']) }}",
         # TODO: add openshift_Master_public_ips
         openshift_env: {{ "oo_env" }}
