add openshift_hostname workaround var
- use openshift_bind_ip for hostname when openshift_hostname_workaround is true
- defaults to true to maintain current behavior.

--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -16,8 +16,9 @@
   lineinfile:
     dest: /etc/sysconfig/openshift-master
     regexp: '^OPTIONS='
-    line: "OPTIONS=\"--public-master={{ openshift_public_ip }} --nodes={{ openshift_node_ips
-          | join(',') }}  --loglevel={{ openshift_master_debug_level }}\""
+    line: "OPTIONS=\"--public-master={{ openshift_public_ip if
+          openshift_hostname_workaround else ansible_fqdn  }} --nodes={{ openshift_node_ips
+              | join(',') }}  --loglevel={{ openshift_master_debug_level }}\""
   notify:
   - restart openshift-master
 
