add support for overriding default registry url

--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -21,6 +21,15 @@
   notify:
   - restart openshift-master
 
+- name: Set default registry url
+  lineinfile:
+    dest: /etc/sysconfig/openshift-master
+    regexp: '^IMAGES='
+    line: "IMAGES={{ openshift_registry_url }}"
+  when: openshift_registry_url is defined
+  notify:
+  - restart openshift-master
+
 - name: Set master OpenShift facts
   include: "{{ role_path | dirname }}/openshift_common/tasks/set_facts.yml"
   facts:
