openshift_node changes for register_node module
- add openshift_register_node module to openshift_node role
  - verifies that node isn't already registered before attempting to register it

--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -55,3 +55,9 @@
 - name: Disable openshift-node if openshift-node is managed externally
   service: name=openshift-node enabled=false
   when: openshift_node_manage_service_externally
+
+# TODO: expose openshift_register_node options to allow for overriding the
+# defaults.
+- name: Register node (if not already registered)
+  openshift_register_node:
+    name: "{{ openshift_hostname }}"
