--- a/playbooks/aws/openshift-node/config.yml
+++ b/playbooks/aws/openshift-node/config.yml
@@ -1,5 +1,5 @@
 ---
-- name: "populate oo_hosts_to_config host group if needed"
+- name: Populate oo_hosts_to_config host group if needed
   hosts: localhost
   gather_facts: no
   tasks:
@@ -10,7 +10,6 @@
 
 - name: "Gather facts for masters in {{ oo_env }}"
   hosts: "tag_env-host-type_{{ oo_env }}-openshift-master"
-- name: "Configure instances"
 - name: Configure instances
   hosts: oo_hosts_to_config
   vars_files:
