Add iptables firewall support to openshift-common
- Set base_os to default to not installing firewalld when the host has a role
  of openshift_master or openshift_node
- Hardcoded openshift_common to use iptables (through the vars directory)
  until upstream support is in place for firewalld
- Added a iptables firewall module for maintaining the following (in a mostly
  naive manner):
  - ensure the OPENSHIFT_ALLOW chain is defined
  - ensure that there is a jump rule in the INPUT chain for OPENSHIFT_ALLOW
  - adds or removes entries from the OPENSHIFT_ALLOW chain
  - issues '/usr/libexec/iptables/iptables.init save' when rules are changed
- Limitations of iptables firewall module
  - only allows setting of ports/protocols to open
  - no testing on ipv6 support

--- a/roles/base_os/tasks/main.yaml
+++ b/roles/base_os/tasks/main.yaml
@@ -20,6 +20,7 @@
   yum:
     pkg: firewalld
     state: installed
+  when: base_os_use_firewalld
 
 - name: start and enable firewalld service
   service:
@@ -27,7 +28,8 @@
     state: started
     enabled: yes
   register: result
+  when: base_os_use_firewalld
 
 - name: need to pause here, otherwise the firewalld service starting can sometimes cause ssh to fail
   pause: seconds=10
-  when: result | changed
+  when: base_os_use_firewalld and result | changed
