Add flexible destination format string to ec2.py
This allows us to construct hostnames from a format string
plus ec2 tag values.

--- a/inventory/aws/ec2.ini
+++ b/inventory/aws/ec2.ini
@@ -53,3 +53,10 @@ cache_path = ~/.ansible/tmp
 # seconds, a new API call will be made, and the cache file will be updated.
 # To disable the cache, set this value to 0
 cache_max_age = 300
+
+# These two settings allow flexible ansible host naming based on a format
+# string and a comma-separated list of ec2 tags.  The tags used must be
+# present for all instances, or the code will fail.  This overrides both
+# destination_variable and vpc_destination_variable.
+# destination_format = {0}.{1}.rhcloud.com
+# destination_format_tags = Name,environment
