rename base_os role to os_env_extras, move application to end since it just sets environment configs for root user

--- a/playbooks/aws/ansible-tower/config.yml
+++ b/playbooks/aws/ansible-tower/config.yml
@@ -16,7 +16,7 @@
     - vars.yml
     - "vars.{{ oo_env }}.yml"
   roles:
-    - base_os
     - os_ipv6_disable
     - ansible
     - ansible_tower
+    - os_env_extras
