--- a/playbooks/gce/openshift-master/config.yml
+++ b/playbooks/gce/openshift-master/config.yml
@@ -31,7 +31,6 @@
   vars_files:
     - vars.yml
   roles:
-    - base_os
     - repos
     - {
         role: openshift_master,
@@ -40,3 +39,4 @@
         openshift_env: "{{ oo_env }}",
       }
     - pods
+    - os_env_extras
