--- a/roles/openshift_common/tasks/main.yml
+++ b/roles/openshift_common/tasks/main.yml
@@ -26,13 +26,17 @@
 - name: Configure local facts file
   file: path=/etc/ansible/facts.d/ state=directory mode=0750
 
-- name: Add KUBECONFIG to .bash_profile for user root
-  lineinfile:
-    dest: /root/.bash_profile
-    regexp: "KUBECONFIG="
-    line: "export KUBECONFIG=/var/lib/openshift/openshift.local.certificates/admin/.kubeconfig"
-    state: present
-    insertafter: EOF
+# TODO: create an os_vars role that has generic env related config and move
+# the root kubeconfig setting there
+- name: Create .kube directory
+  file:
+    path: /root/.kube
+    state: directory
+    mode: 700
+- name: Configure root user kubeconfig
+  command: cp /var/lib/openshift/openshift.local.certificates/admin/.kubeconfig /root/.kube/.kubeconfig
+  args:
+    creates: /root/.kube/.kubeconfig
 
 - name: Set common OpenShift facts
   include: set_facts.yml
