Do not set KUBECONFIG for root user
- instead of setting KUBECONFIG, copy the admin kubeconfig to
  /root/.kube/.kubeconfig in the openshift_master and openshift_node roles
- pause for 30 seconds if the openshift-master service has changed state,
  since the file we are copying is generated by the master

--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -62,6 +62,21 @@
   service: name=openshift-node enabled=false
   when: openshift_node_manage_service_externally
 
+# TODO: create an os_vars role that has generic env related config and move
+# the root kubeconfig setting there, cannot use dependencies to force ordering
+# with openshift_node and openshift_master because the way conditional
+# dependencies work with current ansible would also exclude the
+# openshift_common dependency.
+- name: Create .kube directory
+  file:
+    path: /root/.kube
+    state: directory
+    mode: 700
+- name: Configure root user kubeconfig
+  command: cp /var/lib/openshift/openshift.local.certificates/admin/.kubeconfig /root/.kube/.kubeconfig
+  args:
+    creates: /root/.kube/.kubeconfig
+
 # TODO: expose openshift_register_node options to allow for overriding the
 # defaults.
 - name: Register node (if not already registered)
