--- a/playbooks/aws/openshift-node/config.yml
+++ b/playbooks/aws/openshift-node/config.yml
@@ -1,5 +1,5 @@
 ---
-- name: "populate oo_hosts_to_config host group if needed"
+- name: Populate oo_hosts_to_config host group if needed
   hosts: localhost
   gather_facts: no
   tasks:
@@ -10,34 +10,20 @@
 
 - name: "Gather facts for masters in {{ oo_env }}"
   hosts: "tag_env-host-type_{{ oo_env }}-openshift-master"
-  connection: ssh
-  user: root
-
-- name: "Set OO sepcific facts on localhost (for later use)"
-  hosts: localhost
-  gather_facts: no
-  tasks:
-    - name: Setting openshift_master_ips fact on localhost
-      set_fact:
-        openshift_master_ips: "{{ hostvars
-            | oo_select_keys(groups['tag_env-host-type_' + oo_env + '-openshift-master'])
-            | oo_collect(attribute='ansible_default_ipv4.address') }}"
-      when: groups['tag_env-host-type_' + oo_env + '-openshift-master'] is defined
-
-- name: "Configure instances"
+- name: Configure instances
   hosts: oo_hosts_to_config
-  connection: ssh
-  user: root
   vars_files:
-    - vars.yml
+  - vars.yml
+  vars:
+    openshift_node_manage_service_externally: true
+    openshift_master_ips: "{{ hostvars
+            | oo_select_keys(groups['tag_env-host-type_' + oo_env + '-openshift-master'])
+            | oo_collect(attribute='ansible_default_ipv4.address') | default(['']) }}"
+    openshift_master_public_ips: "{{ hostvars
+            | oo_select_keys(groups['tag_env-host-type_' + oo_env + '-openshift-master'])
+            | oo_collect(attribute='ec2_ip_address') | default(['']) }}"
   roles:
     - repos
     - docker
-    - {
-        role: openshift_node,
-        openshift_master_ips: "{{ hostvars['localhost'].openshift_master_ips | default(['']) }}",
-        # TODO: add openshift_Master_public_ips
-        openshift_env: "{{ oo_env }}"
-        # TODO: openshift_public_ip: set to aws instance public ip
-      }
-    - os_env_extras
+    - openshift-node
+    - openshift-sdn-node
