--- a/roles/openshift_common/meta/main.yml
+++ b/roles/openshift_common/meta/main.yml
@@ -3,7 +3,7 @@ galaxy_info:
   author: Jason DeTiberus
   description: OpenShift Common
   company: Red Hat, Inc.
-  license: ASL 2.0
+  license: Apache License, Version 2.0
   min_ansible_version: 1.7
   platforms:
   - name: EL
