--- a/roles/os_firewall/meta/main.yml
+++ b/roles/os_firewall/meta/main.yml
@@ -2,7 +2,7 @@ galaxy_info:
   author: Jason DeTiberus
   description: os_firewall
   company: Red Hat, Inc.
-  license: ASL 2.0
+  license: Apache License, Version 2.0
   min_ansible_version: 1.7
   platforms:
   - name: EL
